# rational-negotiator

./: Dockerfile  LICENSE  README.md  agent.toml  amber-manifest.json5  main.py  negotiator.py  pyproject.toml  sample.env
.github/workflows/: docker-publish.yml
